Match the docs for the build hook

--- a/hooks/build
+++ b/hooks/build
@@ -1,2 +1,2 @@
 #!/bin/sh
-docker build --build-arg PYTHON_VERSION=$DOCKER_TAG -t $IMAGE_NAME .
+docker build --build-arg PYTHON_VERSION=$DOCKER_TAG -f $DOCKERFILE_PATH -t $IMAGE_NAME .
